--- a/docs/deploy.adoc
+++ b/docs/deploy.adoc
@@ -82,7 +82,7 @@ Once that's done, deploy the new image as an OpenShift application and expose it
 
 [source,sh,role="copypaste"]
 ----
-oc new-app people && oc expose svc/people
+oc new-app people -l "app.openshift.io/runtime=quarkus,app.kubernetes.io/part-of=people" && oc expose svc/people
 ----
 
 Finally, make sure it's actually done rolling out:
