update ocp 4.4 and rhbq 1.3

--- a/docs/basics.adoc
+++ b/docs/basics.adoc
@@ -30,18 +30,10 @@ Step through the prompts, using the following value for **Repository URL**:
 
 [source,none,role="copypaste"]
 ----
-https://github.com/RedHatWorkshops/quarkus-workshop-labs
+https://github.com/RedHat-Middleware-Workshops/quarkus-workshop-labs
 ----
 
 image::crw-clone-repo.png[crw,900]
-
-Next, select `/projects` in the drop-down menu for destination directory:
-
-image::crw-clone-dest.png[crw,900]
-
-And click *Select Repository Location*.
-
-Once imported, choose **Add to workspace** when prompted.
 
 The project is imported into your workspace and is visible in the project explorer (click on the top-most icon for project explorer):
 
@@ -54,6 +46,15 @@ terminal, you can use the **>_ New Terminal** command on the right:
 
 image::cmd-terminal.png[codeready-workspace-terminal, 500]
 ====
+
+==== IMPORTANT: Check out proper Git branch
+
+To make sure you're using the right version of the project files, run this command in a CodeReady Terminal:
+
+[source,sh,role="copypaste"]
+----
+cd $CHE_PROJECTS_ROOT/quarkus-workshop-labs && git checkout ocp-4.4
+----
 
 The project has
 
