--- a/docs/intro.adoc
+++ b/docs/intro.adoc
@@ -1,7 +1,7 @@
 = What is Quarkus?
 :experimental:
 
-image::logo.png[]
+image::logo.png[quarkus-logo, 900]
 
 Quarkus is a Kubernetes Native Java stack tailored for GraalVM & OpenJDK HotSpot, crafted from the best of breed Java libraries and standards. Amazingly fast boot time, incredibly low RSS memory (not just heap size!) offering near instant scale up and high density memory utilization in container orchestration platforms like Kubernetes. Quarkus uses a technique called https://quarkus.io/vision/container-first[compile time boot^] and offers a unified imperative and reactive programming model and a number of other developer features like Live Reload to bring _real joy_ to your development.
 
